netbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-netbox
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: netbox
    app.kubernetes.io/version: v4.1.10
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
    nodePort: null
  selector:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: netbox
  sessionAffinity: None
